@@ -112,5 +112,98 @@ class ValueDoubleStat:public ValueDouble
 		std::deque < double >valueList;
 };
 
+/**
+ * Timeserie variable. Holds float point (double) measurements and measured time,
+ * calculates trends.
+ *
+ * @author Petr Kubanek <petr@kubanek.net>
+ */
+class ValueDoubleTimeserie:public ValueDouble
+{
+	public:
+		ValueDoubleTimeserie (std::string in_val_name);
+		ValueDoubleTimeserie (std::string in_val_name, std::string in_description, bool writeToFits = true, int32_t flags = 0);
+
+		/**
+		 * Clear values in value list.
+		 */
+		void clearStat ();
+
+		/**
+		 * Calculate values statistics.
+		 */
+		void calculate ();
+
+		virtual int setValue (Connection * connection);
+		virtual const char *getValue ();
+		virtual const char *getDisplayValue ();
+		virtual void send (Connection * connection);
+		virtual void setFromValue (Value * newValue);
+
+		int getNumMes () { return numMes; }
+
+		double getMode () { return mode; }
+
+		/**
+		 * Return minimal value.
+		 *
+		 * @return Minimal value.
+		 */
+		double getMin () { return min; }
+
+		/**
+		 * Return maximal value.
+		 *
+		 * @return Maximal value.
+		 */
+		double getMax () { return max; }
+
+		double getStdev () { return stdev; }
+
+		double getAlpha () { return alpha; }
+
+		double getBeta () { return beta; }
+
+		std::deque < std::pair <double, double> >& getMesList () { return valueList; }
+
+		/**
+		 * Add value to the measurement values.
+		 *
+		 * @param in_val Value which will be added.
+		 */
+		void addValue (double in_val, double in_time)
+		{
+			valueList.push_back (std::pair <double, double> (in_val, in_time) );
+			changed ();
+		}
+
+		/**
+		 * Add value to the measurement values. If queue size is greater than
+		 * maxQueSize, delete the first entry.
+		 *
+		 * @param in_val        Value which will be added.
+		 * @param maxQueSize    Maximal queue size.
+		 */
+		void addValue (double in_val, double in_time, size_t maxQueSize)
+		{
+			while (valueList.size () >= maxQueSize)
+				valueList.pop_front ();
+			addValue (in_val, in_time);
+		}
+		std::deque <std::pair <double, double> >::iterator valueBegin () { return valueList.begin (); }
+		std::deque <std::pair <double, double> >::iterator valueEnd () { return valueList.end (); }
+	private:
+		int numMes;
+		double mode;
+		double min;
+		double max;
+		double stdev;
+
+		// trending
+		double alpha;
+		double beta;
+		std::deque < std::pair <double, double> > valueList;
+};
+
 }
 #endif							 /* !__RTS2_VALUESTAT__ */
