@@ -1,3 +1,6 @@
+2012-11-29
+ * timeseries (trending)
+
 2012-11-28
  * moved model and telescope drivers to rts2tel library
 
